--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "foodoo",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.6"
+    "angular": "1.2.6",
+    "angular-resource": "1.2.6"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
