--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "1.2.6",
-    "angular-resource": "1.2.6"
+    "angular-resource": "1.2.6",
+    "angular-route": "1.2.6"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
